# xtiff

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  ome.xml  ome201606v2.xml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  xtiff.py
.github/workflows/: build.yml  test.yml  test_and_deploy.yml
test/: test_ome.py  test_tiff.py
tests/: test_ome.py  test_tiff.py
xtiff/: __init__.py  ome.py  tiff.py
