[metadata]
name = xtiff
url = https://github.com/BodenmillerGroup/xtiff
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
license = MIT
description = A tiny Python library for writing multi-channel TIFF stacks
long_description = file: README.md, CONTRIBUTING.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown

[options]
zip_safe = True
install_requires =
    numpy
    tifffile>=2022.4.22
python_requires = >=3.7
packages = find:

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black
