[metadata]
name = xtiff
url = https://github.com/BodenmillerGroup/xtiff
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
license = MIT
description = A tiny Python library for writing multi-channel TIFF stacks
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
install_requires =
    numpy
    tifffile>=2022.4.22
python_requires = >=3.8
packages = find:
